--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#8B4513" />
+  <meta name="description" content="Discover the majestic world of lions - their behavior, habitat, diet, and fascinating biology. Your ultimate resource for lion enthusiasts." />
+  <meta name="keywords" content="lions, wildlife, animals, nature, big cats, safari, education, conservation" />
+  <meta name="author" content="Team Lion" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Team Lion - Discover the Majestic World of Lions" />
+  <meta property="og:description" content="Your ultimate resource for everything about lions - behavior, habitat, diet, and conservation." />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:title" content="Team Lion - Discover the Majestic World of Lions" />
+  <meta property="twitter:description" content="Your ultimate resource for everything about lions - behavior, habitat, diet, and conservation." />
+
+  <!-- Preload critical fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+
+  <title>Team Lion - Discover the Majestic World of Lions</title>
+</head>
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
 </html>
